Todo:
Continouos->reset time trigger time measure
Icons for animation transporter
2D Camera local zoom
Closing animationController should switch to Automatic
Mouse Wheel support

07-03-10 Added local group reset
[3h]	 Fixed Aspect Ratio for 3D
		 Added keyboard shortcuts
		 Updated HTML help

01-03-10 Automatic should always have time=0
[2h]	 Animation should be an automatic mode
		 Remove reset button,
		 2D Cam control working + Aspect Ratio

27-02-10 3D Camera nearly reimplemented and working
[3h]	 Added bounding sphere check to raytracer
		 Sliders/Spinner now use full double resolution if possible
		 
23-02-10 Major refactoring of widgets in progress.
[3h]	 Added normalized float3 slider

16-02-10 Animation + export is working now.
[2h]

15-02-10 Added animation controller dialog (in progress)
[3h]	 Updated texture demo
		 Added experimental/QuaternionMandelbrot4D.frag
		 GPU/CPU benchmark (in progress)

02-02-10 Tilebased render dialog added.
[3h]	 SpotLight is now always on camera-oriented hemisphere (and expressed in spherical coords as a vec2)
		 Added support for 2D sliders in GUI.
		 Update DE-raytracer: new background vignette, better normal estimation.

27-01-10 Added a 'preview' slider to toolbar (in progress)
[3h]	 Refactored DE-raytracer in order to separate color and lighting.
		 Now clamps colors after anti-aliased (to prevent killing specular highlights).


25-01-10 Added prototype for tilebased render (currently tiles are fixed to 3x3)
[3h]	 Added context menu with clear and copy to clipboard to log.
		 Fixed a bug causing resizeGL to crash on some (probably broken) Linux drivers.
		 Added a 'debanding' term to DE-raytracer.
		 Added a 3 second time-out to splash-screen.
		 
Release of Fragmentarium 0.5.6 [57h]

20-01-10 Updated all GLSL examples to avoid calling functions in global variable initializers (this did not work on ATI drivers)
[2h]	 Cleaned up examples a bit.

19-01-10 Write out Camera hints after rendering