@@ -194,7 +194,7 @@ namespace SyntopiaCore {
 			scalar v[16];
 		};
 
-		typedef Matrix4<float> Matrix4f ;
+		typedef Matrix4<double> Matrix4f ;
 		typedef Matrix4<double> Matrix4d ;
 	}
 }
