@@ -1,9 +1,13 @@
 Todo:
 Continouos->reset time trigger time measure
 Icons for animation transporter
-2D Camera local zoom
-Closing animationController should switch to Automatic
 Mouse Wheel support
+Change purple info text to white on black
+Bug: preview off requires rebuild
+
+08-03-10 Added support for lower resolution preview rendering (using two stage Render-to-FrameBufferObject / Texture rendering)
+[2h]	 Fixed rounding error with 3D fly camera.
+		 Closing animationController should switch to Automatic
 
 07-03-10 Added local group reset
 [3h]	 Fixed Aspect Ratio for 3D
